--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,47 @@
-# Amadeus API Credentials
-VITE_CLIENT_ID=seu_client_id_aqui
-VITE_ACCESS_TOKEN=seu_access_token_aqui
+# =====================================
+# VARIÁVEIS DE AMBIENTE - AGÊNCIA DE VIAGENS
+# =====================================
 
-# Google Integration
-VITE_CLIENT_GOOGLE=seu_id_google_aqui.apps.googleusercontent.com
+# ⚠️ ATENÇÃO: NUNCA commite este arquivo com valores reais!
+# ⚠️ Em produção, estas chaves devem estar no BACKEND, não no frontend!
+
+# -------------------------------------
+# AMADEUS API
+# -------------------------------------
+# Obtenha suas credenciais em: https://developers.amadeus.com
+# 1. Crie uma conta
+# 2. Acesse "My Self-Service Workspace"
+# 3. Copie o API Key e API Secret
+
+VITE_AMADEUS_API_KEY=your_amadeus_api_key_here
+VITE_AMADEUS_API_SECRET=your_amadeus_api_secret_here
+
+# Ambiente da API (test ou production)
+VITE_AMADEUS_ENVIRONMENT=test
+
+# -------------------------------------
+# GOOGLE OAUTH 2.0
+# -------------------------------------
+# Obtenha suas credenciais em: https://console.cloud.google.com
+# 1. Crie um novo projeto
+# 2. Ative a API "Google+ API"
+# 3. Vá em "Credenciais" > "Criar credenciais" > "ID do cliente OAuth"
+# 4. Configure as origens autorizadas:
+#    - http://localhost:5173
+#    - https://seu-dominio.com (em produção)
+
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
+
+# -------------------------------------
+# OBSERVAÇÕES IMPORTANTES
+# -------------------------------------
+# 🔴 O prefixo VITE_ torna a variável PÚBLICA no navegador!
+# 🔴 Qualquer pessoa pode ver essas chaves inspecionando o código
+# 🔴 Use este projeto apenas para fins educacionais/demonstração
+#
+# ✅ Para produção, implemente um backend intermediário:
+#    Frontend → Seu Backend → Amadeus API
+#                          → Google OAuth
+#
+# ✅ No backend, use variáveis de ambiente SEM o prefixo VITE_
+# ✅ Implemente autenticação, rate limiting e validação adequadas
